nixos/manifests/gateway/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: proxy-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: metrics
      protocol: HTTP
      port: 19001
    - name: https.creds.cec.dlandau.nl
      protocol: HTTPS
      hostname: creds.cec.dlandau.nl
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: creds.cec.dlandau.nl
    - name: https.pgadmin.cec.dlandau.nl
      protocol: HTTPS
      hostname: pgadmin.cec.dlandau.nl
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: pgadmin.cec.dlandau.nl
    - name: https.grafana.cec.dlandau.nl
      protocol: HTTPS
      hostname: grafana.cec.dlandau.nl
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: grafana.cec.dlandau.nl
    - name: https.notifications.cec.dlandau.nl
      protocol: HTTPS
      hostname: notifications.cec.dlandau.nl
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: notifications.cec.dlandau.nl
    - name: https.monitoring.cec.dlandau.nl
      protocol: HTTPS
      hostname: monitoring.cec.dlandau.nl
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: monitoring.cec.dlandau.nl
    - name: kafka1-ssl
      protocol: TCP
      port: 19092
    - name: kafka2-ssl
      protocol: TCP
      port: 29092
    - name: kafka3-ssl
      protocol: TCP
      port: 39092
